@startuml Logical/Class View
skinparam classAttributeIconSize 0
title Logical / Class View - CJ Secure 

package "controllers" {
  class LoginController
  class RecordController
  class AdminController
}

package "services" {
  class AuthService
  class RecordService
  class MFAService
  class AuditLogger
}

package "repositories" {
  class UserRepository
  class RecordRepository
  class AuditRepository
}

package "models" {
  class User
  class Record
  class SecurityEvent
}

package "security" {
  abstract class MFAStrategy
  class EmailOTPStrategy
  class TOTPStrategy
}

' Core layer flow 
LoginController --> AuthService
RecordController --> RecordService
AdminController --> AuditLogger

AuthService --> UserRepository
AuthService --> MFAService

RecordService --> RecordRepository

AuditLogger --> AuditRepository

' Models 
UserRepository --> User
RecordRepository --> Record
AuditRepository --> SecurityEvent

' Strategy pattern 
MFAStrategy <|-- EmailOTPStrategy
MFAStrategy <|-- TOTPStrategy
MFAService --> MFAStrategy

@enduml